--- a/res/layout/ultra_list_view_activity.xml
+++ b/res/layout/ultra_list_view_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -11,7 +11,7 @@
 
         <EditText
             android:id="@+id/editText1"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10" >
@@ -27,15 +27,25 @@
             android:visibility="visible" />
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/android:list"
-        android:background="@drawable/ic_launcher"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:longClickable="true"
-        android:smoothScrollbar="true" >
-    </ListView>
+        android:layout_weight="1" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/search" />
+
+        <ListView
+            android:id="@+id/android:list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:cacheColorHint="#00000000"
+            android:longClickable="true"
+            android:smoothScrollbar="true" />
+    </RelativeLayout>
 
     <include layout="@layout/selection_optionbar" />
 
